ah, fixed. Culprit was an unnecessary width:100% that was causing padding to overflow the 100% boundingbox. CSS, you suck.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,5 +1,5 @@
 body{ margin:2 auto; }
-#pagetop{ width:100%; padding: 2px; }
+#pagetop{ padding:2px; }
 .content{ background:#f6f6ef; float:left; width:40em; padding-top:10px; margin-bottom:1em; }
 #stream{ }
 .view{ margin-left:20px; }
